@@ -59,6 +59,8 @@
 - Packing: Reduced RAM consumption while packing by using IIBTree.Set
   instead of built-in set objects.
 
+- commit-lock-timeout support for PostgreSQL 9.3+.
+
 - MySQL 5.5: The test suite was freezing in checkBackwardTimeTravel. Fixed.
 
 - Added performance metrics using the perfmetrics package.
